--- a/mark-blog/src/assets/icon/iconfont.css
+++ b/mark-blog/src/assets/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4485642 */
-  src: url('iconfont.woff2?t=1711595673558') format('woff2'),
-       url('iconfont.woff?t=1711595673558') format('woff'),
-       url('iconfont.ttf?t=1711595673558') format('truetype');
+  src: url('iconfont.woff2?t=1711617159346') format('woff2'),
+       url('iconfont.woff?t=1711617159346') format('woff'),
+       url('iconfont.ttf?t=1711617159346') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-git:before {
+  content: "\e799";
 }
 
 .icon-gmail:before {
