--- a/mark-blog/src/assets/icon/iconfont.css
+++ b/mark-blog/src/assets/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4485642 */
-  src: url('iconfont.woff2?t=1711682037293') format('woff2'),
-       url('iconfont.woff?t=1711682037293') format('woff'),
-       url('iconfont.ttf?t=1711682037293') format('truetype');
+  src: url('iconfont.woff2?t=1711982716842') format('woff2'),
+       url('iconfont.woff?t=1711982716842') format('woff'),
+       url('iconfont.ttf?t=1711982716842') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-dagou:before {
+  content: "\e682";
+}
+
+.icon-youjiantou:before {
+  content: "\e600";
 }
 
 .icon-fork:before {
